--- a/src/app/components/order-history/order-history.component.css
+++ b/src/app/components/order-history/order-history.component.css
@@ -74,3 +74,6 @@ form > mat-form-field .mat-form-field-underline {
 /deep/ .mat-header-cell {
     font-size:15px
 }
+/deep/ button:focus {
+    outline: none;
+}
