--- a/src/app/components/order-history/order-history.component.html
+++ b/src/app/components/order-history/order-history.component.html
@@ -1,63 +1,57 @@
 
 
-<mat-sidenav-container class="main-container" autosize>
-    <div class="main-sidenav-content">
-        <mat-toolbar color="primary">
-            <app-searchbar></app-searchbar>
-            <span class="side-spacer"></span>
-            <i class="material-icons">shopping_cart</i> <span class="header-title"><a routerLink="" style="color: #fff;text-decoration: none;">Bán hàng</a></span>
-            <span class="icon-spacer"></span>
-            <span class="icon-spacer"></span>
-            <mat-icon>exit_to_app</mat-icon>
-        </mat-toolbar>
-        <div class="col-sm-12">
-            <div class="order-container">
-                <div class="table-header">
-                    <mat-form-field>
-                        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Tìm kiếm" >
-                    </mat-form-field>
-                </div>
-                <mat-table #table [dataSource]="dataSource" matSort>
-                    <!-- Position Column -->
-                    <ng-container matColumnDef="salesOrderCode">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Số đơn hàng </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.salesOrderCode}} </mat-cell>
-                    </ng-container>
-
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="customerName">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Tên khách hàng </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.customerName}} </mat-cell>
-                    </ng-container>
-                    <!-- Symbol Column -->
-                    <ng-container matColumnDef="orderDate">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Ngày đặt hàng </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.orderDate | date:'dd/MM/yyyy'}} </mat-cell>
-                    </ng-container>
-                    <ng-container matColumnDef="orderStatus">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.orderStatus}} </mat-cell>
-                    </ng-container>
-                    <ng-container matColumnDef="totalAmount">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> Thành tiền </mat-header-cell>
-                        <mat-cell *matCellDef="let element"> {{element.totalAmount | amountConverter}} </mat-cell>
-                    </ng-container>
-                    <ng-container matColumnDef="action">
-                        <mat-header-cell *matHeaderCellDef> Thao tác </mat-header-cell>
-                        <mat-cell *matCellDef="let element">
-                            <button  (click)="viewDetailSO(element)" style="background-color:#f37022;border:none;color:#fff;padding: 3px 9px; border-radius: 5px; cursor:pointer">Chi tiết</button>
-                        </mat-cell>
-                    </ng-container>
-                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-                </mat-table>
-
-                <!--<mat-paginator #paginator
-                               [pageSize]="5"
-                               [showFirstLastButtons]="true">
-                </mat-paginator>-->
+<h3 mat-dialog-title>Lịch sử đơn hàng</h3>
+<mat-dialog-content>
+    <div class="col-sm-12" style="padding-top:5px">
+        <div class="order-container">
+            <div class="table-header">
+                <mat-form-field [floatLabel]="auto">
+                    <mat-label>Tìm kiếm</mat-label>
+                    <input matInput (keyup)="applyFilter($event.target.value)">
+                </mat-form-field>
             </div>
+            <mat-table #table [dataSource]="dataSource" matSort>
+                <!-- Position Column -->
+                <ng-container matColumnDef="salesOrderCode">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Số đơn hàng </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.salesOrderCode}} </mat-cell>
+                </ng-container>
+
+                <!-- Weight Column -->
+                <ng-container matColumnDef="customerName">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Tên khách hàng </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.customerName}} </mat-cell>
+                </ng-container>
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="orderDate">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Ngày đặt hàng </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.orderDate | date:'dd/MM/yyyy'}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="orderStatus">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.orderStatus}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="totalAmount">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header> Thành tiền </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.totalAmount | amountConverter}} </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="action">
+                    <mat-header-cell *matHeaderCellDef> Thao tác </mat-header-cell>
+                    <mat-cell *matCellDef="let element">
+                        <button (click)="viewDetailSO(element)" style="background-color:#f37022;border:none;color:#fff;padding: 3px 9px; border-radius: 5px; cursor:pointer">Chi tiết</button>
+                    </mat-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+
+            <mat-paginator #paginator
+                           [pageSize]="9"
+                           [showFirstLastButtons]="true">
+            </mat-paginator>
         </div>
     </div>
-
-</mat-sidenav-container>
+</mat-dialog-content>
+<mat-dialog-actions>
+    <button mat-button [mat-dialog-close]="orders">Đóng</button>
+</mat-dialog-actions>
