--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+
 <mat-sidenav-container class="main-container" autosize>
     <div class="main-sidenav-content">
         <mat-toolbar color="primary">
@@ -9,7 +10,9 @@
     font-size: 15px;
     color: #fff;
     background-color: #f37022;
-    border: none;">Lịch sử đơn hàng</button>
+    border: none;">
+                    Lịch sử đơn hàng
+                </button>
             </span>
             <span class="icon-spacer"></span>
             <!--<mat-icon>language</mat-icon> <span class="header-title">Ngôn ngữ</span>-->
@@ -33,14 +36,16 @@
         <mat-toolbar color="primary">
             <mat-icon class="account-icon md-48">account_circle</mat-icon>
             <span class="side-spacer"></span>
-            <mat-icon>notification_important</mat-icon>
-            <p style="font-size:20px" *ngIf="countSO > 0" (click)="resetNotifice()">{{countSO}}</p>
+            <mat-icon (click)="resetNotifice()" style="cursor:pointer">notification_important</mat-icon>
+            <p style="font-size:20px" *ngIf="countSO > 0">{{countSO}}</p>
             <span class="icon-spacer"></span>
             <!--<mat-icon>help</mat-icon>-->
             <span class="icon-spacer"></span>
             <mat-icon (click)="logout()" style="cursor:pointer">exit_to_app</mat-icon>
         </mat-toolbar>
+
         <app-so-summary [(so)]="currentSO" (removeSO)="removeSO($event)"></app-so-summary>
+        <app-alerts></app-alerts>
     </mat-sidenav>
 </mat-sidenav-container>
 <app-print [(so)]="currentSO"></app-print>
