--- a/src/app/components/order-history/order-history.component.html
+++ b/src/app/components/order-history/order-history.component.html
@@ -5,7 +5,7 @@
     <div class="col-sm-12" style="padding-top:5px">
         <div class="order-container">
             <div class="table-header">
-                <mat-form-field [floatLabel]="auto">
+                <mat-form-field>
                     <mat-label>Tìm kiếm</mat-label>
                     <input matInput (keyup)="applyFilter($event.target.value)">
                 </mat-form-field>
